--- a/css_5/style.css
+++ b/css_5/style.css
@@ -1198,7 +1198,6 @@ main .bg {
   border-collapse: collapse;
   border-radius: 3px;
   margin: 0px 0px 15px 20px;
-  background: #ffffff;
   position: relative;
 }
 .playBoard:last-child {
@@ -1216,19 +1215,14 @@ main .bg {
   z-index: -1;
   box-shadow: 0px 0px 5px 0px #00000049;
 }
-.playBoard.index_page tr:nth-of-type(1):hover, .playBoard.index_page tr:nth-of-type(2):hover, .playBoard.result_page tr:nth-of-type(1):hover, .playBoard.result_page tr:nth-of-type(2):hover {
-  background: none;
-}
 .playBoard.index_page tr:nth-of-type(2) th, .playBoard.result_page tr:nth-of-type(2) th {
   background: #f7f7f7;
   color: #666666;
 }
 .playBoard tr {
   text-align: center;
+  background: #ffffff;
   border-bottom: solid 1px #ebebeb;
-}
-.playBoard tr:nth-of-type(1):hover {
-  background: none;
 }
 .playBoard tr:nth-of-type(1) th.tLeft:nth-of-type(1)::before {
   content: "";
@@ -1248,6 +1242,9 @@ main .bg {
 }
 .playBoard tr.onTime td button {
   background: #ece3cb;
+}
+.playBoard tr.liveBoard {
+  pointer-events: none;
 }
 .playBoard tr:hover, .playBoard tr:active, .playBoard tr.active {
   background: #d5dcef;
@@ -1271,6 +1268,7 @@ main .bg {
   position: sticky;
   top: -1px;
   z-index: 2;
+  pointer-events: none;
 }
 .playBoard tr th.tLeft {
   text-align: left;
@@ -2320,7 +2318,6 @@ main .bg {
   height: auto;
   border-collapse: collapse;
   margin: 0px auto;
-  background: #fffbcc;
 }
 .scoreBoard.live th {
   padding: 8px 0px 6px;
@@ -2329,25 +2326,17 @@ main .bg {
 }
 .scoreBoard tr {
   text-align: center;
-}
-.scoreBoard tr:hover, .scoreBoard tr:active, .scoreBoard tr.active {
-  box-shadow: none;
-  border: none;
-  background: none;
-}
-.scoreBoard tr:hover:nth-of-type(1), .scoreBoard tr:active:nth-of-type(1), .scoreBoard tr.active:nth-of-type(1) {
-  border-top: solid 1px #ffdfcc;
-}
-.scoreBoard tr:hover td, .scoreBoard tr:active td, .scoreBoard tr.active td {
-  border-color: #e8b746;
-  color: #1b1b1b;
-}
-.scoreBoard tr:hover td .pitcher, .scoreBoard tr:active td .pitcher, .scoreBoard tr.active td .pitcher {
-  color: #ce1427;
+  background: #fffbcc;
+  border-bottom: solid 1px #e8b746;
 }
 .scoreBoard tr:nth-of-type(odd) {
   background: #fffbcc;
-  border-top-color: #ffdfcc;
+}
+.scoreBoard tr:nth-of-type(1) {
+  border-top: solid 1px #ffdfcc;
+}
+.scoreBoard tr:last-child {
+  border-bottom: solid 1px #e8b746;
 }
 .scoreBoard tr th {
   color: #1b1b1b;
@@ -2355,11 +2344,8 @@ main .bg {
   padding: 7px 0px 3px;
   vertical-align: middle;
   background: #ffe29f;
-  border-style: solid;
-  border-width: 0px 1px 1px 0px;
-  border-color: transparent #fba978 #e8b746 transparent;
+  border-right: solid 1px #fba978;
   position: static;
-  pointer-events: none;
 }
 .scoreBoard tr th::before {
   display: none;
@@ -2375,9 +2361,7 @@ main .bg {
   word-break: break-all;
   color: #1b1b1b;
   line-height: 18px;
-  border-style: solid;
-  border-width: 0px 1px 1px 0px;
-  border-color: #e8b746;
+  border-right: solid 1px #e8b746;
   position: relative;
 }
 .scoreBoard tr td::before {
