--- a/scss_3/_table.scss
+++ b/scss_3/_table.scss
@@ -5,7 +5,6 @@
     border-collapse: collapse;
 	border-radius: 3px;
 	margin: 0px 0px 10px 10px;
-	background: #505050;
 
 	&:last-child {
 		margin-bottom: 30px;
@@ -14,10 +13,19 @@
 	//內容
     tr {
 		text-align: center;
+		background: #505050;
 		border-bottom: solid 1px #ababab;
 
 		&:hover,&:active,&.active {
 			background: #8f8f8f;
+		}
+
+		&.onTime {
+			background: #000000;
+		}
+
+		&.liveBoard {
+			pointer-events: none;
 		}
 
       	th {
@@ -30,6 +38,7 @@
 			position: sticky;
 			top: -1px;
 			z-index: 2;
+			pointer-events: none;
 
 			//字靠左
 			&.tLeft {
@@ -2063,7 +2072,6 @@
 	height: auto;
 	border-collapse: collapse;
 	margin: 0px auto;
-	background: #fffbcc;
   
 	&.live {
   
@@ -2077,29 +2085,15 @@
 	//內容
 	tr {
 		text-align: center;
-	
-		&:hover,&:active,&.active {
-			box-shadow: none;
-			border: none;
-			background: none;
-
-			&:nth-of-type(1) {
-				border-top: solid 1px #ffdfcc;
-			}
-	
-			td {
-				border-color: #e8b746;
-				color: #1b1b1b;
-	
-				.pitcher {
-					color: #ce1427;
-				}
-			}
-		}
+		background: #fffbcc;
+		border-bottom: solid 1px #e8b746;
 	
 		&:nth-of-type(odd) {
 			background: #fffbcc;
-			border-top-color: #ffdfcc;
+		}
+
+		&:nth-of-type(1) {
+			border-top: solid 1px #ffdfcc;
 		}
   
 		th {
@@ -2108,11 +2102,8 @@
 			padding: 7px 0px 3px;
 			vertical-align: middle;
 			background: #ffe29f;
-			border-style: solid;
-			border-width: 0px 1px 1px 0px;
-			border-color: transparent #fba978 #e8b746 transparent;
+			border-right: solid 1px #fba978;
 			position: static;
-			pointer-events: none;
 
 			&::before {
 				display: none;
@@ -2132,9 +2123,7 @@
 			word-break: break-all;
 			color: #1b1b1b;
 			line-height: 18px;
-			border-style: solid;
-			border-width: 0px 1px 1px 0px;
-			border-color: #e8b746;
+			border-right: solid 1px #e8b746;
 			position: relative;
 
 			&::before {
