--- a/scss_5/_table.scss
+++ b/scss_5/_table.scss
@@ -5,7 +5,6 @@
     border-collapse: collapse;
 	border-radius: 3px;
 	margin: 0px 0px 15px 20px;
-	background: #ffffff;
 	position: relative;
 
 	&:last-child {
@@ -29,13 +28,6 @@
 
 		tr {
 
-			&:nth-of-type(1),&:nth-of-type(2) {
-
-				&:hover {
-					background: none;
-				}
-			}
-
 			&:nth-of-type(2) {
 
 				th {
@@ -49,13 +41,10 @@
 	//內容
     tr {
 		text-align: center;
+		background: #ffffff;
 		border-bottom: solid 1px #ebebeb;
 
 		&:nth-of-type(1) {
-
-			&:hover {
-				background: none;
-			}
 
 			th {
 
@@ -94,6 +83,10 @@
 			}
 		}
 
+		&.liveBoard {
+			pointer-events: none;
+		}
+
 		&:hover,&:active,&.active {
 			background: #d5dcef;
 
@@ -119,6 +112,7 @@
 			position: sticky;
 			top: -1px;
 			z-index: 2;
+			pointer-events: none;
 
 			//字靠左
 			&.tLeft {
@@ -2126,7 +2120,6 @@
 	height: auto;
 	border-collapse: collapse;
 	margin: 0px auto;
-	background: #fffbcc;
   
 	&.live {
   
@@ -2140,29 +2133,19 @@
 	//內容
 	tr {
 		text-align: center;
-	
-		&:hover,&:active,&.active {
-			box-shadow: none;
-			border: none;
-			background: none;
-
-			&:nth-of-type(1) {
-				border-top: solid 1px #ffdfcc;
-			}
-	
-			td {
-				border-color: #e8b746;
-				color: #1b1b1b;
-	
-				.pitcher {
-					color: #ce1427;
-				}
-			}
-		}
+		background: #fffbcc;
+		border-bottom: solid 1px #e8b746;
 	
 		&:nth-of-type(odd) {
 			background: #fffbcc;
-			border-top-color: #ffdfcc;
+		}
+
+		&:nth-of-type(1) {
+			border-top: solid 1px #ffdfcc;
+		}
+		
+		&:last-child {
+			border-bottom: solid 1px #e8b746;
 		}
   
 		th {
@@ -2171,11 +2154,8 @@
 			padding: 7px 0px 3px;
 			vertical-align: middle;
 			background: #ffe29f;
-			border-style: solid;
-			border-width: 0px 1px 1px 0px;
-			border-color: transparent #fba978 #e8b746 transparent;
+			border-right: solid 1px #fba978;
 			position: static;
-			pointer-events: none;
 
 			&::before {
 				display: none;
@@ -2195,9 +2175,7 @@
 			word-break: break-all;
 			color: #1b1b1b;
 			line-height: 18px;
-			border-style: solid;
-			border-width: 0px 1px 1px 0px;
-			border-color: #e8b746;
+			border-right: solid 1px #e8b746;
 			position: relative;
 
 			&::before {
