--- a/css_2/style.css
+++ b/css_2/style.css
@@ -1099,34 +1099,30 @@ main .bg {
   border-collapse: collapse;
   border-radius: 3px;
   margin: 0px 0px 10px 10px;
-  background: #ffffff;
 }
 .playBoard:last-child {
-  margin-bottom: 40px;
-}
-.playBoard.index_page tr:nth-of-type(2):hover, .playBoard.result_page tr:nth-of-type(2):hover {
-  border-color: transparent transparent #356bf7 transparent;
-  box-shadow: none;
+  margin-bottom: 30px;
 }
 .playBoard.index_page tr th:nth-of-type(1).tLeft, .playBoard.result_page tr th:nth-of-type(1).tLeft {
   border-bottom: solid 1px #dedede;
 }
 .playBoard tr {
   text-align: center;
-  border-style: solid;
-  border-width: 1px;
-  border-color: transparent transparent #dedede transparent;
+  background: #ffffff;
+  border-bottom: solid 1px #dedede;
 }
 .playBoard tr:nth-of-type(1) {
   border-top-color: #f2f2f2;
   border-bottom-color: #f0f0f0;
 }
-.playBoard tr:nth-of-type(1):hover {
-  border-color: transparent;
-  box-shadow: none;
-}
 .playBoard tr:nth-of-type(odd) {
   background: #fbfbfb;
+}
+.playBoard tr.onTime {
+  background: #000000;
+}
+.playBoard tr.liveBoard {
+  pointer-events: none;
 }
 .playBoard tr:hover, .playBoard tr:active, .playBoard tr.active {
   background: #fffce5;
@@ -1154,6 +1150,7 @@ main .bg {
   top: -1px;
   z-index: 2;
   border-bottom: solid 1px #356bf7;
+  pointer-events: none;
 }
 .playBoard tr th.tLeft {
   text-align: left;
@@ -2208,7 +2205,6 @@ main .bg {
   height: auto;
   border-collapse: collapse;
   margin: 0px auto;
-  background: #fffbcc;
 }
 .scoreBoard.live th {
   padding: 8px 0px 6px;
@@ -2217,25 +2213,14 @@ main .bg {
 }
 .scoreBoard tr {
   text-align: center;
-}
-.scoreBoard tr:hover, .scoreBoard tr:active, .scoreBoard tr.active {
-  box-shadow: none;
-  border: none;
-  background: none;
-}
-.scoreBoard tr:hover:nth-of-type(1), .scoreBoard tr:active:nth-of-type(1), .scoreBoard tr.active:nth-of-type(1) {
-  border-top: solid 1px #ffdfcc;
-}
-.scoreBoard tr:hover td, .scoreBoard tr:active td, .scoreBoard tr.active td {
-  border-color: #e8b746;
-  color: #1b1b1b;
-}
-.scoreBoard tr:hover td .pitcher, .scoreBoard tr:active td .pitcher, .scoreBoard tr.active td .pitcher {
-  color: #ce1427;
+  background: #fffbcc;
+  border-bottom: solid 1px #e8b746;
 }
 .scoreBoard tr:nth-of-type(odd) {
   background: #fffbcc;
-  border-top-color: #ffdfcc;
+}
+.scoreBoard tr:nth-of-type(1) {
+  border-top: solid 1px #ffdfcc;
 }
 .scoreBoard tr th {
   color: #1b1b1b;
@@ -2243,11 +2228,8 @@ main .bg {
   padding: 7px 0px 3px;
   vertical-align: middle;
   background: #ffe29f;
-  border-style: solid;
-  border-width: 0px 1px 1px 0px;
-  border-color: transparent #fba978 #e8b746 transparent;
+  border-right: solid 1px #fba978;
   position: static;
-  pointer-events: none;
 }
 .scoreBoard tr th::before {
   display: none;
@@ -2263,9 +2245,7 @@ main .bg {
   word-break: break-all;
   color: #1b1b1b;
   line-height: 18px;
-  border-style: solid;
-  border-width: 0px 1px 1px 0px;
-  border-color: #e8b746;
+  border-right: solid 1px #e8b746;
   position: relative;
 }
 .scoreBoard tr td::before {
