--- a/css_3/style.css
+++ b/css_3/style.css
@@ -1017,17 +1017,23 @@ main .bg {
   border-collapse: collapse;
   border-radius: 3px;
   margin: 0px 0px 10px 10px;
-  background: #505050;
 }
 .playBoard:last-child {
   margin-bottom: 30px;
 }
 .playBoard tr {
   text-align: center;
+  background: #505050;
   border-bottom: solid 1px #ababab;
 }
 .playBoard tr:hover, .playBoard tr:active, .playBoard tr.active {
   background: #8f8f8f;
+}
+.playBoard tr.onTime {
+  background: #000000;
+}
+.playBoard tr.liveBoard {
+  pointer-events: none;
 }
 .playBoard tr th {
   color: #fff;
@@ -1040,6 +1046,7 @@ main .bg {
   position: sticky;
   top: -1px;
   z-index: 2;
+  pointer-events: none;
 }
 .playBoard tr th.tLeft {
   text-align: left;
@@ -2110,7 +2117,6 @@ main .bg {
   height: auto;
   border-collapse: collapse;
   margin: 0px auto;
-  background: #fffbcc;
 }
 .scoreBoard.live th {
   padding: 8px 0px 6px;
@@ -2119,25 +2125,14 @@ main .bg {
 }
 .scoreBoard tr {
   text-align: center;
-}
-.scoreBoard tr:hover, .scoreBoard tr:active, .scoreBoard tr.active {
-  box-shadow: none;
-  border: none;
-  background: none;
-}
-.scoreBoard tr:hover:nth-of-type(1), .scoreBoard tr:active:nth-of-type(1), .scoreBoard tr.active:nth-of-type(1) {
-  border-top: solid 1px #ffdfcc;
-}
-.scoreBoard tr:hover td, .scoreBoard tr:active td, .scoreBoard tr.active td {
-  border-color: #e8b746;
-  color: #1b1b1b;
-}
-.scoreBoard tr:hover td .pitcher, .scoreBoard tr:active td .pitcher, .scoreBoard tr.active td .pitcher {
-  color: #ce1427;
+  background: #fffbcc;
+  border-bottom: solid 1px #e8b746;
 }
 .scoreBoard tr:nth-of-type(odd) {
   background: #fffbcc;
-  border-top-color: #ffdfcc;
+}
+.scoreBoard tr:nth-of-type(1) {
+  border-top: solid 1px #ffdfcc;
 }
 .scoreBoard tr th {
   color: #1b1b1b;
@@ -2145,11 +2140,8 @@ main .bg {
   padding: 7px 0px 3px;
   vertical-align: middle;
   background: #ffe29f;
-  border-style: solid;
-  border-width: 0px 1px 1px 0px;
-  border-color: transparent #fba978 #e8b746 transparent;
+  border-right: solid 1px #fba978;
   position: static;
-  pointer-events: none;
 }
 .scoreBoard tr th::before {
   display: none;
@@ -2165,9 +2157,7 @@ main .bg {
   word-break: break-all;
   color: #1b1b1b;
   line-height: 18px;
-  border-style: solid;
-  border-width: 0px 1px 1px 0px;
-  border-color: #e8b746;
+  border-right: solid 1px #e8b746;
   position: relative;
 }
 .scoreBoard tr td::before {
