--- a/scss_4/_table.scss
+++ b/scss_4/_table.scss
@@ -5,7 +5,6 @@
     border-collapse: collapse;
 	border-radius: 3px;
 	margin: 0px 0px 10px 10px;
-	background: #ffffff;
 	box-shadow: 0px 0px 5px 0px #00000049;
 
 	&:last-child {
@@ -15,14 +14,6 @@
 	&.index_page,&.result_page {
 
 		tr {
-
-			&:nth-of-type(2) {
-
-				&:hover {
-					border-color: transparent transparent #f0f0f0 transparent;
-					box-shadow: none;
-				}
-			}
 
 			th {
 				
@@ -40,18 +31,11 @@
 	//內容
     tr {
 		text-align: center;
-		border-style: solid;
-		border-width: 1px;
-		border-color: transparent transparent #dedede transparent;
+		background: #ffffff;
+		border-bottom: solid 1px #dedede;
 
 		&:nth-of-type(1) {
 			border-top-color: #f2f2f2;
-			border-bottom-color: #f0f0f0;
-
-			&:hover {
-				border-color: transparent;
-				box-shadow: none;
-			}
 		}
 
 		&:nth-of-type(odd) {
@@ -59,12 +43,11 @@
 		}
 
 		&:hover,&:active,&.active {
-			border: solid 1px #d31c1c;
 			background: #ffffff;
-			box-shadow: 0px 0px 5px 2px #d31c1c49;
+			box-shadow: 0px 0px 0px 1px #d31c1c inset,0px 0px 5px 2px #d31c1c49 inset;
 
 			td {
-				border-top: solid 1px #d31c1c;
+				box-shadow: 0px 1px 0px 0px #d31c1c inset;
 				color: #ce1427;
 
 				&.allScore {
@@ -98,6 +81,7 @@
 			position: sticky;
 			top: -1px;
 			z-index: 2;
+			pointer-events: none;
 
 			//字靠左
 			&.tLeft {
@@ -304,23 +288,7 @@
 		  
 		&.liveBoard {
 			background: #39547f;
-	  
-			&:hover,&:active,&.active {
-				box-shadow: none;
-				border-color: transparent transparent #dedede transparent;
-		
-				.box {
-					border: none;
-				}
-		
-				td {
-					color: #1b1b1b;
-		
-					.pitcher {
-					color: #ce1427;
-					}
-				}
-			}
+			pointer-events: none;
 		}
 	}
 
@@ -2143,7 +2111,6 @@
 	height: auto;
 	border-collapse: collapse;
 	margin: 0px auto;
-	background: #fffbcc;
   
 	&.live {
   
@@ -2157,29 +2124,15 @@
 	//內容
 	tr {
 		text-align: center;
-	
-		&:hover,&:active,&.active {
-			box-shadow: none;
-			border: none;
-			background: none;
-
-			&:nth-of-type(1) {
-				border-top: solid 1px #ffdfcc;
-			}
-	
-			td {
-				border-color: #e8b746;
-				color: #1b1b1b;
-	
-				.pitcher {
-					color: #ce1427;
-				}
-			}
-		}
+		background: #fffbcc;
+		border-bottom: solid 1px #e8b746;
 	
 		&:nth-of-type(odd) {
 			background: #fffbcc;
-			border-top-color: #ffdfcc;
+		}
+
+		&:nth-of-type(1) {
+			border-top: solid 1px #ffdfcc;
 		}
   
 		th {
@@ -2188,11 +2141,8 @@
 			padding: 7px 0px 3px;
 			vertical-align: middle;
 			background: #ffe29f;
-			border-style: solid;
-			border-width: 0px 1px 1px 0px;
-			border-color: transparent #fba978 #e8b746 transparent;
+			border-right: solid 1px #fba978;
 			position: static;
-			pointer-events: none;
 
 			&::before {
 				display: none;
@@ -2212,20 +2162,8 @@
 			word-break: break-all;
 			color: #1b1b1b;
 			line-height: 18px;
-			border-style: solid;
-			border-width: 0px 1px 1px 0px;
-			border-color: #e8b746;
+			border-right: solid 1px #e8b746;
 			position: relative;
-
-			&::before {
-				content: "";
-				position: absolute;
-				left: 0px;
-				bottom: 0px;
-				background: #ffffff;
-				width: 100%;
-				height: 1px;
-			}
 	
 			//字靠左
 			&.tLeft {
