--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -2064,42 +2064,35 @@
 	border-collapse: collapse;
 	margin: 0px auto;
   
-	&.live {
-  
-	  th {
-			padding: 8px 0px 6px;
-			background: #39547f;
-			color: #ffffff;
-	  	}
-	}
-  
 	//內容
 	tr {
 		text-align: center;
-		background: #fffbcc;
-		border-bottom: solid 1px #e8b746;
+		background: #4f77b1;
+		border-style: solid;
+		border-width: 0px 0px 1px 1px;
+		border-color: #8eb6ef;
 	
 		&:nth-of-type(odd) {
-			background: #fffbcc;
+			background: #4f77b1;
 		}
 
 		&:nth-of-type(1) {
-			border-top: solid 1px #ffdfcc;
+			border-top: solid 1px #8dafe0;
 		}
   
 		th {
-			color: #1b1b1b;
+			color: #ffffff;
 			font-size: 13px;
 			padding: 7px 0px 3px;
 			vertical-align: middle;
-			background: #ffe29f;
-			border-right: solid 1px #fba978;
+			background: #3d659e;
+			border-right: solid 1px #8dafe0;
 			position: static;
 
 			&:nth-of-type(1) {
 
 				&.tLeft {
-					color: #1b1b1b;
+					color: #ffffff;
 				}
 			}
 	
@@ -2115,20 +2108,10 @@
 			padding: 8px 3px;
 			vertical-align: middle;
 			word-break: break-all;
-			color: #1b1b1b;
+			color: #ffffff;
 			line-height: 18px;
-			border-right: solid 1px #e8b746;
+			border-right: solid 1px #8eb6ef;
 			position: relative;
-
-			&::before {
-				content: "";
-				position: absolute;
-				left: 0px;
-				bottom: 0px;
-				background: #ffffff;
-				width: 100%;
-				height: 1px;
-			}
 	
 			//字靠左
 			&.tLeft {
