--- a/css/style.css
+++ b/css/style.css
@@ -2187,33 +2187,30 @@ main .bg {
   border-collapse: collapse;
   margin: 0px auto;
 }
-.scoreBoard.live th {
-  padding: 8px 0px 6px;
-  background: #39547f;
-  color: #ffffff;
-}
 .scoreBoard tr {
   text-align: center;
-  background: #fffbcc;
-  border-bottom: solid 1px #e8b746;
+  background: #4f77b1;
+  border-style: solid;
+  border-width: 0px 0px 1px 1px;
+  border-color: #8eb6ef;
 }
 .scoreBoard tr:nth-of-type(odd) {
-  background: #fffbcc;
+  background: #4f77b1;
 }
 .scoreBoard tr:nth-of-type(1) {
-  border-top: solid 1px #ffdfcc;
+  border-top: solid 1px #8dafe0;
 }
 .scoreBoard tr th {
-  color: #1b1b1b;
+  color: #ffffff;
   font-size: 13px;
   padding: 7px 0px 3px;
   vertical-align: middle;
-  background: #ffe29f;
-  border-right: solid 1px #fba978;
+  background: #3d659e;
+  border-right: solid 1px #8dafe0;
   position: static;
 }
 .scoreBoard tr th:nth-of-type(1).tLeft {
-  color: #1b1b1b;
+  color: #ffffff;
 }
 .scoreBoard tr th.tLeft {
   text-align: left;
@@ -2224,19 +2221,10 @@ main .bg {
   padding: 8px 3px;
   vertical-align: middle;
   word-break: break-all;
-  color: #1b1b1b;
+  color: #ffffff;
   line-height: 18px;
-  border-right: solid 1px #e8b746;
+  border-right: solid 1px #8eb6ef;
   position: relative;
-}
-.scoreBoard tr td::before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  background: #ffffff;
-  width: 100%;
-  height: 1px;
 }
 .scoreBoard tr td.tLeft {
   text-align: left;
@@ -4865,6 +4853,9 @@ main .bg {
   scrollbar-width: thin;
   top: 70px;
 }
+.middle.live {
+  top: 0px;
+}
 .middle::-webkit-scrollbar {
   width: 5px;
   background-color: transparent;
@@ -5420,6 +5411,174 @@ main .bg {
   background: linear-gradient(to right, #92e820 0%, #46dd16 100%);
   border-color: #aef156;
   color: #222222;
+}
+
+.liveExpansion {
+  width: calc(100% - 10px);
+  height: auto;
+  background: #303030;
+  margin: 0px 0px 10px 10px;
+}
+.liveExpansion .liveShowBar {
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+  padding: 0px 15px;
+  background: linear-gradient(to top, #323232 0%, #434343 100%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  left: 0px;
+  z-index: 2;
+}
+.liveExpansion .liveShowBar p {
+  color: #ffffff;
+  font-size: 16px;
+}
+.liveExpansion .liveShowBar div {
+  width: auto;
+  height: auto;
+}
+.liveExpansion .liveShowBar div button {
+  width: 20px;
+  height: 20px;
+  background: url(../images/liveSelect2.png) no-repeat;
+  background-size: 300%;
+  margin-left: 8px;
+}
+.liveExpansion .liveShowBar div button:nth-of-type(2) {
+  background-position-x: 50%;
+}
+.liveExpansion .liveShowBar div button:nth-of-type(3) {
+  background-position-x: 100%;
+}
+.liveExpansion .liveShowBar div button:hover, .liveExpansion .liveShowBar div button:active, .liveExpansion .liveShowBar div button.active {
+  background-position-y: 100%;
+}
+.liveExpansion .liveShowBox {
+  width: 100%;
+  height: auto;
+  font-size: 0px;
+}
+.liveExpansion .liveShowBox.one .videoContainer:nth-of-type(1) {
+  width: 100%;
+}
+.liveExpansion .liveShowBox.one .videoContainer video {
+  max-height: 640px;
+}
+.liveExpansion .liveShowBox.two .videoContainer:nth-of-type(1), .liveExpansion .liveShowBox.two .videoContainer:nth-of-type(2) {
+  width: 50%;
+}
+.liveExpansion .liveShowBox .videoContainer {
+  display: inline-block;
+  width: 0%;
+  position: relative;
+  transition: 0.2s all;
+}
+.liveExpansion .liveShowBox .videoContainer:hover::before, .liveExpansion .liveShowBox .videoContainer:active::before {
+  opacity: 1;
+}
+.liveExpansion .liveShowBox .videoContainer:hover .close, .liveExpansion .liveShowBox .videoContainer:active .close {
+  opacity: 1;
+  -webkit-user-select: initial;
+          user-select: initial;
+}
+.liveExpansion .liveShowBox .videoContainer.active::before {
+  opacity: 1;
+  border-color: #ff0000;
+}
+.liveExpansion .liveShowBox .videoContainer::before {
+  opacity: 0;
+  transition: 0.3s all;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: solid 3px #ffffff;
+  box-sizing: border-box;
+}
+.liveExpansion .liveShowBox .videoContainer video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+.liveExpansion .liveShowBox .videoContainer .close {
+  opacity: 0;
+  -webkit-user-select: none;
+          user-select: none;
+  transition: 0.3s all;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border: solid 1px #ffffff;
+  background: #00000080;
+  top: 20px;
+  right: 20px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.liveExpansion .liveShowBox .videoContainer .close::before {
+  position: absolute;
+  content: "";
+  left: 48%;
+  top: 22%;
+  transform: rotate(45deg);
+  width: 2px;
+  height: 25px;
+  border-radius: 30px;
+  background: #ffffff;
+}
+.liveExpansion .liveShowBox .videoContainer .close::after {
+  position: absolute;
+  content: "";
+  left: 48%;
+  top: 22%;
+  transform: rotate(-45deg);
+  width: 2px;
+  height: 25px;
+  border-radius: 30px;
+  background: #ffffff;
+}
+
+.liveBettingBox {
+  width: 100%;
+  height: 150px;
+  overflow: auto;
+}
+.liveBettingBox::-webkit-scrollbar {
+  width: 5px;
+  background-color: transparent;
+}
+.liveBettingBox::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+.liveBettingBox::-webkit-scrollbar-thumb {
+  background: #b9becf;
+  border-radius: 10px;
+}
+.liveBettingBox.one, .liveBettingBox.four {
+  height: 150px;
+}
+.liveBettingBox.two {
+  height: auto;
+}
+.liveBettingBox .playBoard tr th {
+  position: relative;
+  background: linear-gradient(to top, #323232 0%, #434343 100%);
+}
+.liveBettingBox .playBoard tr th:nth-of-type(1).tLeft {
+  color: #cacaca;
+}
+.liveBettingBox .playBoard tr th.tLeft, .liveBettingBox .playBoard tr td.tLeft {
+  padding-left: 10px;
+}
+.liveBettingBox .scoreBoard {
+  width: calc(100% - 10px);
+  margin: 0px 0px 20px 10px;
 }
 
 .filter {
