--- a/css_5/style.css
+++ b/css_5/style.css
@@ -2319,11 +2319,6 @@ main .bg {
   border-collapse: collapse;
   margin: 0px auto;
 }
-.scoreBoard.live th {
-  padding: 8px 0px 6px;
-  background: #39547f;
-  color: #ffffff;
-}
 .scoreBoard tr {
   text-align: center;
   background: #fffbcc;
@@ -5770,13 +5765,15 @@ main .bg {
   height: auto;
   background: #303030;
   margin: 0px 0px 10px 10px;
+  border-radius: 5px 5px 0px 0px;
+  overflow: hidden;
 }
 .liveExpansion .liveShowBar {
   width: 100%;
   height: 50px;
   box-sizing: border-box;
   padding: 0px 15px;
-  background: linear-gradient(to top, #323232 0%, #434343 100%);
+  background: #ffffff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -5787,7 +5784,7 @@ main .bg {
   z-index: 2;
 }
 .liveExpansion .liveShowBar p {
-  color: #ffffff;
+  color: #1b1b1b;
   font-size: 16px;
 }
 .liveExpansion .liveShowBar div {
@@ -5797,7 +5794,7 @@ main .bg {
 .liveExpansion .liveShowBar div button {
   width: 20px;
   height: 20px;
-  background: url(../images/liveSelect.png) no-repeat;
+  background: url(../images/liveSelect4.png) no-repeat;
   background-size: 300%;
   margin-left: 8px;
 }
