--- a/scss_3/_table.scss
+++ b/scss_3/_table.scss
@@ -21,7 +21,7 @@
 		}
 
 		&.onTime {
-			background: #000000;
+			background: #4f5779;
 		}
 
 		&.liveBoard {
@@ -2073,36 +2073,29 @@
 	border-collapse: collapse;
 	margin: 0px auto;
   
-	&.live {
-  
-	  th {
-			padding: 8px 0px 6px;
-			background: #39547f;
-			color: #ffffff;
-	  	}
-	}
-  
 	//內容
 	tr {
 		text-align: center;
-		background: #fffbcc;
-		border-bottom: solid 1px #e8b746;
+		background: #818cc3;
+		border-style: solid;
+		border-width: 0px 0px 1px 1px;
+		border-color: #bcc5ef;
 	
 		&:nth-of-type(odd) {
-			background: #fffbcc;
+			background: #818cc3;
 		}
 
 		&:nth-of-type(1) {
-			border-top: solid 1px #ffdfcc;
+			border-top: solid 1px #bcc5ef;
 		}
   
 		th {
-			color: #1b1b1b;
+			color: #ffffff;
 			font-size: 13px;
 			padding: 7px 0px 3px;
 			vertical-align: middle;
-			background: #ffe29f;
-			border-right: solid 1px #fba978;
+			background: #6974ad;
+			border-right: solid 1px #bcc5ef;
 			position: static;
 
 			&::before {
@@ -2121,20 +2114,10 @@
 			padding: 8px 3px;
 			vertical-align: middle;
 			word-break: break-all;
-			color: #1b1b1b;
+			color: #ffffff;
 			line-height: 18px;
-			border-right: solid 1px #e8b746;
+			border-right: solid 1px #bcc5ef;
 			position: relative;
-
-			&::before {
-				content: "";
-				position: absolute;
-				left: 0px;
-				bottom: 0px;
-				background: #ffffff;
-				width: 100%;
-				height: 1px;
-			}
 	
 			//字靠左
 			&.tLeft {
