--- a/scss_5/_type.scss
+++ b/scss_5/_type.scss
@@ -727,13 +727,15 @@
     height: auto;
     background: #303030;
     margin: 0px 0px 10px 10px;
+    border-radius: 5px 5px 0px 0px;
+    overflow: hidden;
 
     .liveShowBar {
         width: 100%;
         height: 50px;
         box-sizing: border-box;
         padding: 0px 15px;
-        background: linear-gradient(to top,#323232 0%,#434343 100%);
+        background: #ffffff;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -743,7 +745,7 @@
         z-index: 2;
 
         p {
-            color: #ffffff;
+            color: #1b1b1b;
             font-size: 16px;
         }
 
@@ -754,7 +756,7 @@
             button {
                 width: 20px;
                 height: 20px;
-                background: url(../images/liveSelect.png) no-repeat;
+                background: url(../images/liveSelect4.png) no-repeat;
                 background-size: 300%;
                 margin-left: 8px;
 
@@ -886,7 +888,6 @@
         }
     }
 }
-
 .liveBettingBox {
     width: 100%;
     height: 150px;
